--- a/V2RayX/Base.lproj/MainMenu.xib
+++ b/V2RayX/Base.lproj/MainMenu.xib
@@ -15,14 +15,13 @@
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
                 <outlet property="editPacMenuItem" destination="3NY-51-bgh" id="dgA-Xq-mKn"/>
-                <outlet property="enabelV2rayItem" destination="I9I-uu-xak" id="b3P-ct-RqE"/>
+                <outlet property="enableV2rayItem" destination="I9I-uu-xak" id="b3P-ct-RqE"/>
                 <outlet property="globalModeItem" destination="12u-76-Ytb" id="RA8-m2-Iv6"/>
                 <outlet property="manualModeItem" destination="P4q-kj-6fs" id="5XH-9p-w3e"/>
-                <outlet property="pacListMenu" destination="25R-TF-TBx" id="xGh-bJ-AGG"/>
+                <outlet property="pacListMenu" destination="yno-KX-HOj" id="qzq-pN-ala"/>
                 <outlet property="pacModeItem" destination="Cm9-3e-L2z" id="IvE-nJ-dW0"/>
-                <outlet property="pacsItem" destination="Cm9-3e-L2z" id="RVg-X8-RBp"/>
                 <outlet property="ruleSetMenuList" destination="8Ld-d4-m0U" id="DNS-66-cYT"/>
-                <outlet property="serverListMenu" destination="pPD-dn-4h0" id="6sH-L6-Uzx"/>
+                <outlet property="serverListMenu" destination="eqU-gH-G4L" id="unc-2a-DIW"/>
                 <outlet property="serversItem" destination="3wi-Co-2Kd" id="kKi-8l-dDJ"/>
                 <outlet property="statusBarMenu" destination="yZm-2L-r3v" id="3iW-vb-TOn"/>
                 <outlet property="v2rayRulesItem" destination="bUi-AV-IfA" id="p4V-ny-gh7"/>
@@ -682,46 +681,43 @@
         </menu>
         <menu id="yZm-2L-r3v">
             <items>
-                <menuItem title="Item 1" enabled="NO" id="EFa-yl-fQC">
+                <menuItem title="core status" enabled="NO" id="EFa-yl-fQC">
                     <modifierMask key="keyEquivalentModifierMask"/>
                 </menuItem>
-                <menuItem title="Item 2" id="I9I-uu-xak">
+                <menuItem title="load/unload core" id="I9I-uu-xak">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="enableProxy:" target="Voe-Tx-rLC" id="04r-lh-Ats"/>
+                        <action selector="didChangeStatus:" target="Voe-Tx-rLC" id="fLo-9H-9XD"/>
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="Zce-eo-WsH"/>
-                <menuItem title="V2Ray Rules" id="bUi-AV-IfA">
-                    <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" id="8Ld-d4-m0U"/>
-                    <connections>
-                        <action selector="chooseV2rayRules:" target="Voe-Tx-rLC" id="D4f-2N-1Dq"/>
-                    </connections>
-                </menuItem>
                 <menuItem title="PAC Mode" id="Cm9-3e-L2z">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="pac file" id="yno-KX-HOj"/>
                     <connections>
-                        <action selector="choosePacMode:" target="Voe-Tx-rLC" id="0yC-jW-pRH"/>
+                        <action selector="didChangeMode:" target="Voe-Tx-rLC" id="1eE-WI-EUp"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Global Mode" id="12u-76-Ytb">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="chooseGlobalMode:" target="Voe-Tx-rLC" id="mRp-Df-8Ma"/>
+                        <action selector="didChangeMode:" target="Voe-Tx-rLC" id="yeL-Gb-C6p"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Manual Mode" id="P4q-kj-6fs">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="chooseManualMode:" target="Voe-Tx-rLC" id="ELM-Qb-zRn"/>
+                        <action selector="didChangeMode:" target="Voe-Tx-rLC" id="jH0-sn-1XU"/>
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="A8t-NG-v92"/>
-                <menuItem title="Servers" id="3wi-Co-2Kd">
+                <menuItem title="Server" id="3wi-Co-2Kd">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Servers" id="eqU-gH-G4L"/>
+                    <menu key="submenu" title="Server" id="eqU-gH-G4L"/>
+                </menuItem>
+                <menuItem title="Routing Rule" id="bUi-AV-IfA">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <menu key="submenu" title="Routing Rule" id="8Ld-d4-m0U"/>
                 </menuItem>
                 <menuItem title="Configure..." id="0hJ-Jo-rS2">
                     <modifierMask key="keyEquivalentModifierMask"/>
@@ -783,17 +779,11 @@
             </items>
             <point key="canvasLocation" x="-152" y="-193"/>
         </menu>
-        <menu title="ServerList" id="pPD-dn-4h0">
-            <point key="canvasLocation" x="385" y="-115"/>
-        </menu>
         <menuItem title="Edit pac file" id="3NY-51-bgh">
             <modifierMask key="keyEquivalentModifierMask"/>
             <connections>
                 <action selector="editPac:" target="Voe-Tx-rLC" id="4jX-Hv-SpU"/>
             </connections>
         </menuItem>
-        <menu id="25R-TF-TBx" userLabel="Pac List Menu">
-            <point key="canvasLocation" x="80" y="-138"/>
-        </menu>
     </objects>
 </document>
